--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "groq-sdk": "^0.30.0",
+    "mongoose": "^8.18.0",
     "openai": "^5.15.0"
   }
 }
