--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "dotenv": "^17.2.1",
     "groq-sdk": "^0.30.0",
     "mongoose": "^8.18.0",
-    "openai": "^5.15.0"
+    "openai": "^5.15.0",
+    "readline-sync": "^1.4.10"
   }
 }
